--- a/example/exampleApp/src/Makefile
+++ b/example/exampleApp/src/Makefile
@@ -21,6 +21,7 @@ example_DBD += asSupport.dbd
 example_DBD += devIocStats.dbd
 example_DBD += busySupport.dbd
 example_DBD += scaleArray.dbd
+example_DBD += sseqRecord.dbd
 
 # example_registerRecordDeviceDriver.cpp derives from example.dbd
 example_SRCS += example_registerRecordDeviceDriver.cpp
@@ -43,6 +44,7 @@ example_LIBS += autosave
 example_LIBS += devIocStats
 example_LIBS += busy
 example_LIBS += genericIOSupport
+example_LIBS += calc
 
 # Finally link to the EPICS Base libraries
 example_LIBS += $(EPICS_BASE_IOC_LIBS)
