--- a/st.cmd.config
+++ b/st.cmd.config
@@ -54,6 +54,10 @@ NDROIStatConfigure("$(PORT).DET2.XY.ROI", 100, 0, "$(PORT).DET2.XY", 0, 8, -1, -
 NDROIStatConfigure("$(PORT).DET3.XY.ROI", 100, 0, "$(PORT).DET3.XY", 0, 8, -1, -1, 0, 0)
 NDROIStatConfigure("$(PORT).DET4.XY.ROI", 100, 0, "$(PORT).DET4.XY", 0, 8, -1, -1, 0, 0)
 
-
+#Stats plugins to do advance statistics on XY plot (and produce profile plots).
+NDStatsConfigure("$(PORT).DET1.XY.STAT", 100, 0, "$(PORT).DET1.XY", 0, -1, -1, 0, 0)
+NDStatsConfigure("$(PORT).DET2.XY.STAT", 100, 0, "$(PORT).DET2.XY", 0, -1, -1, 0, 0)
+NDStatsConfigure("$(PORT).DET3.XY.STAT", 100, 0, "$(PORT).DET3.XY", 0, -1, -1, 0, 0)
+NDStatsConfigure("$(PORT).DET4.XY.STAT", 100, 0, "$(PORT).DET4.XY", 0, -1, -1, 0, 0)
 
 #End of st.cmd.config
