Add template to calculate the event rate in an ROI. This is now used for all the ROIs for both XY and TOF data.

--- a/ADnEDApp/Db/Makefile
+++ b/ADnEDApp/Db/Makefile
@@ -19,6 +19,7 @@ DB += ADnEDDetectorPixelPlugin.template
 DB += ADnEDPixelROI.template
 DB += ADnEDDetectorROIPluginASG.template
 DB += ADnEDDetectorTOFROIScale.template
+DB += ADnEDDetectorROIRate.template
 
 #----------------------------------------------------
 # If <anyname>.db template is not named <anyname>*.template add
