--- a/ADnEDApp/Db/ADnEDDetector.template
+++ b/ADnEDApp/Db/ADnEDDetector.template
@@ -770,5 +770,45 @@ substitute "ROI=7"
 include "ADnEDDetectorTOFROIScale.template"
 
 
+#####################################################################
+# Add ROI rate calculations for TOF and pixel XY ROIs
+
+substitute "TYPE=TOF"
+substitute "ROI=0"
+include "ADnEDDetectorROIRate.template"
+substitute "ROI=1"
+include "ADnEDDetectorROIRate.template"
+substitute "ROI=2"
+include "ADnEDDetectorROIRate.template"
+substitute "ROI=3"
+include "ADnEDDetectorROIRate.template"
+substitute "ROI=4"
+include "ADnEDDetectorROIRate.template"
+substitute "ROI=5"
+include "ADnEDDetectorROIRate.template"
+substitute "ROI=6"
+include "ADnEDDetectorROIRate.template"
+substitute "ROI=7"
+include "ADnEDDetectorROIRate.template"
+
+substitute "TYPE=XY"
+substitute "ROI=0"
+include "ADnEDDetectorROIRate.template"
+substitute "ROI=1"
+include "ADnEDDetectorROIRate.template"
+substitute "ROI=2"
+include "ADnEDDetectorROIRate.template"
+substitute "ROI=3"
+include "ADnEDDetectorROIRate.template"
+substitute "ROI=4"
+include "ADnEDDetectorROIRate.template"
+substitute "ROI=5"
+include "ADnEDDetectorROIRate.template"
+substitute "ROI=6"
+include "ADnEDDetectorROIRate.template"
+substitute "ROI=7"
+include "ADnEDDetectorROIRate.template"
+
+
 
 
