--- a/ADnEDApp/src/Makefile
+++ b/ADnEDApp/src/Makefile
@@ -10,6 +10,7 @@ include $(TOP)/configure/CONFIG
 USR_CXXFLAGS += -Wunused-but-set-variable
 
 LIBRARY_IOC += ADnEDSupport
+LIBRARY_IOC += ADnEDTransform
 
 # Install DBD files into <top>/dbd
 #DBD += ADnED.dbd
@@ -20,6 +21,8 @@ ADnEDSupport_SRCS += ADnED.cpp
 ADnEDSupport_SRCS += nEDChannel.cpp
 ADnEDSupport_SRCS += ADnEDPixelROI.cpp
 ADnEDSupport_SRCS += ADnEDFile.cpp
+
+ADnEDTransform_SRCS += ADnEDTransform.cpp
 
 ADnEDSupport_LIBS += $(EPICS_BASE_IOC_LIBS)
 
