Support up to 6 TOF trans arrays, integer params and float params for the ADnEDTransform functions. Fix error reporting in writeOctet function.

--- a/ADnEDApp/Db/ADnEDDetector.template
+++ b/ADnEDApp/Db/ADnEDDetector.template
@@ -279,11 +279,11 @@ record(bi, "$(P)$(R)Det$(DET):TOFROIFilterEnable_RBV")
 # /// TOF spectrum. For example, we can create a d-space spectrum 
 # /// by defining the multiplication factors in the file for each pixel ID.
 # ///
-record(waveform, "$(P)$(R)Det$(DET):TOFTransFile")
+record(waveform, "$(P)$(R)Det$(DET):TOFTransFile0")
 {
     field(PINI, "YES")
     field(DTYP, "asynOctetWrite")
-    field(INP,  "@asyn($(PORT),$(DET),$(TIMEOUT))ADNED_DET_TOF_TRANS_FILE")
+    field(INP,  "@asyn($(PORT),$(DET),$(TIMEOUT))ADNED_DET_TOF_TRANS_FILE0")
     field(FTVL, "CHAR")
     field(NELM, "1024")
     info(autosaveFields, "VAL")
@@ -293,10 +293,10 @@ record(waveform, "$(P)$(R)Det$(DET):TOFTransFile")
 # ///
 # /// TOF Transformation File Readback
 # ///
-record(waveform, "$(P)$(R)Det$(DET):TOFTransFile_RBV")
+record(waveform, "$(P)$(R)Det$(DET):TOFTransFile0_RBV")
 {
     field(DTYP, "asynOctetRead")
-    field(INP,  "@asyn($(PORT),$(DET),$(TIMEOUT))ADNED_DET_TOF_TRANS_FILE")
+    field(INP,  "@asyn($(PORT),$(DET),$(TIMEOUT))ADNED_DET_TOF_TRANS_FILE0")
     field(FTVL, "CHAR")
     field(NELM, "1024")
     field(SCAN, "I/O Intr")
