Rename ADnEDTransform related macros and function names to be more consistent.

--- a/ADnEDApp/Db/ADnEDDetector.template
+++ b/ADnEDApp/Db/ADnEDDetector.template
@@ -307,9 +307,9 @@ record(mbbo, "$(P)$(R)Det$(DET):TOFTransType")
    field(OUT,  "@asyn($(PORT),$(DET),$(TIMEOUT))ADNED_DET_TOF_TRANS_TYPE")
    field(ZRST, "None")
    field(ZRVL, "0")
-   field(ONST, "Array Multiplier")
+   field(ONST, "Static D Space")
    field(ONVL, "1")
-   field(TWST, "D Space")
+   field(TWST, "Dynamic D Space")
    field(TWVL, "2")
    field(THST, "Delta E")
    field(THVL, "3")
