Fixed mbbo descriptions for TOFTransType record.

--- a/ADnEDApp/Db/ADnEDDetector.template
+++ b/ADnEDApp/Db/ADnEDDetector.template
@@ -326,9 +326,9 @@ record(mbbi, "$(P)$(R)Det$(DET):TOFTransType_RBV")
    field(INP,  "@asyn($(PORT),$(DET),$(TIMEOUT))ADNED_DET_TOF_TRANS_TYPE")
    field(ZRST, "None")
    field(ZRVL, "0")
-   field(ONST, "Array Multiplier")
+   field(ONST, "Static D Space")
    field(ONVL, "1")
-   field(TWST, "D Space")
+   field(TWST, "Dynamic D Space")
    field(TWVL, "2")
    field(THST, "Delta E")
    field(THVL, "3")
