Seperate ADnEDTransform into two classes. Common code is now in a base class. ADnEDTransform now inherits from the base class. Should make it easier to do custom beamline specific calculations because it will involve less custom code.

--- a/ADnEDApp/src/Makefile
+++ b/ADnEDApp/src/Makefile
@@ -22,6 +22,7 @@ ADnEDSupport_SRCS += nEDChannel.cpp
 ADnEDSupport_SRCS += ADnEDPixelROI.cpp
 ADnEDSupport_SRCS += ADnEDFile.cpp
 
+ADnEDTransform_SRCS += ADnEDTransformBase.cpp
 ADnEDTransform_SRCS += ADnEDTransform.cpp
 
 ADnEDSupport_LIBS += $(EPICS_BASE_IOC_LIBS)
