Remove dependency on custom version of ADCore NDROIStat template. Now we're using the standard version from ADCore 2-2.

--- a/ADnEDApp/Db/ADnEDDetectorPixelPlugin.template
+++ b/ADnEDApp/Db/ADnEDDetectorPixelPlugin.template
@@ -41,7 +41,34 @@ substitute "R=$(ADNED)Det$(DET):XY:ROI:"
 substitute "PORT=$(ADNED_PORT).DET$(DET).XY.ROI"
 substitute "NDARRAY_PORT=$(ADNED_PORT).DET$(DET).XY"
 include "NDPluginBase.template"
-include "NDROIStat8.template"
+include "NDROIStat.template"
+substitute "R=$(ADNED)Det$(DET):XY:ROI:0:"
+substitute "ADDR=0"
+include "NDROIStatN.template"
+substitute "R=$(ADNED)Det$(DET):XY:ROI:1:"
+substitute "ADDR=1"
+include "NDROIStatN.template"
+substitute "R=$(ADNED)Det$(DET):XY:ROI:2:"
+substitute "ADDR=2"
+include "NDROIStatN.template"
+substitute "R=$(ADNED)Det$(DET):XY:ROI:3:"
+substitute "ADDR=3"
+include "NDROIStatN.template"
+substitute "R=$(ADNED)Det$(DET):XY:ROI:4:"
+substitute "ADDR=4"
+include "NDROIStatN.template"
+substitute "R=$(ADNED)Det$(DET):XY:ROI:5:"
+substitute "ADDR=5"
+include "NDROIStatN.template"
+substitute "R=$(ADNED)Det$(DET):XY:ROI:6:"
+substitute "ADDR=6"
+include "NDROIStatN.template"
+substitute "R=$(ADNED)Det$(DET):XY:ROI:7:"
+substitute "ADDR=7"
+include "NDROIStatN.template"
+
+substitute "ADDR=0"
+substitute "R=$(ADNED)Det$(DET):XY:ROI:"
 
 # Single Stats Plugin on entire 2-D NDArray
 substitute "R=$(ADNED)Det$(DET):XY:Stat:"
