--- a/ADnEDApp/Db/ADnEDDetectorTOFPlugin.template
+++ b/ADnEDApp/Db/ADnEDDetectorTOFPlugin.template
@@ -39,7 +39,34 @@ substitute "R=$(ADNED)Det$(DET):TOF:ROI:"
 substitute "PORT=$(ADNED_PORT).DET$(DET).TOF.ROI"
 substitute "NDARRAY_PORT=$(ADNED_PORT).DET$(DET).TOF"
 include "NDPluginBase.template"
-include "NDROIStat8.template"
+include "NDROIStat.template"
+substitute "R=$(ADNED)Det$(DET):TOF:ROI:0:"
+substitute "ADDR=0"
+include "NDROIStatN.template"
+substitute "R=$(ADNED)Det$(DET):TOF:ROI:1:"
+substitute "ADDR=1"
+include "NDROIStatN.template"
+substitute "R=$(ADNED)Det$(DET):TOF:ROI:2:"
+substitute "ADDR=2"
+include "NDROIStatN.template"
+substitute "R=$(ADNED)Det$(DET):TOF:ROI:3:"
+substitute "ADDR=3"
+include "NDROIStatN.template"
+substitute "R=$(ADNED)Det$(DET):TOF:ROI:4:"
+substitute "ADDR=4"
+include "NDROIStatN.template"
+substitute "R=$(ADNED)Det$(DET):TOF:ROI:5:"
+substitute "ADDR=5"
+include "NDROIStatN.template"
+substitute "R=$(ADNED)Det$(DET):TOF:ROI:6:"
+substitute "ADDR=6"
+include "NDROIStatN.template"
+substitute "R=$(ADNED)Det$(DET):TOF:ROI:7:"
+substitute "ADDR=7"
+include "NDROIStatN.template"
+
+substitute "ADDR=0"
+substitute "R=$(ADNED)Det$(DET):TOF:ROI:"
 
 #####################################################################
 # Put ROI0 to ROI4 into ASG=ALWAYS group for TOF XY plot.
