--- a/ADnEDApp/Db/ADnEDDetectorTOFROIScale.template
+++ b/ADnEDApp/Db/ADnEDDetectorTOFROIScale.template
@@ -44,7 +44,7 @@ record(calcout, "$(P)$(R)Det$(DET):TOF:ROI:$(ROI):CalcMin")
    field(INPB, "$(SIZE1) CP")
    field(INPC, "$(SIZE2) CP")
    field(INPD, "$(SIZE3) CP")
-   field(CALC, "(((D-A)/B)*C)")
+   field(CALC, "(((A-D)/B)*C)")
    field(OUT, "$(P)$(R)Det$(DET):TOF:ROI:$(ROI):MinX PP")
 }
 
