ADnEDDetectorPixelPlugin.template & ADnEDDetectorTOFPlugin.template: set the ASG=ALWAYS for the ROI params 5-7 (0-4 were already done). Fix macro error for XY ROIs ASG.

--- a/ADnEDApp/Db/ADnEDDetectorPixelPlugin.template
+++ b/ADnEDApp/Db/ADnEDDetectorPixelPlugin.template
@@ -78,6 +78,8 @@ substitute "NCHANS=1024"
 include "NDPluginBase.template"
 include "NDStats.template"
 
+substitute "ADDR=0"
+substitute "R=$(ADNED)Det$(DET):XY:ROI:"
 
 #####################################################################
 # Put ROI0 to ROI4 into ASG=ALWAYS group for pixel XY plot.
@@ -95,6 +97,15 @@ substitute "ROI=3"
 include "ADnEDDetectorROIPluginASG.template"
 
 substitute "ROI=4"
+include "ADnEDDetectorROIPluginASG.template"
+
+substitute "ROI=5"
+include "ADnEDDetectorROIPluginASG.template"
+
+substitute "ROI=6"
+include "ADnEDDetectorROIPluginASG.template"
+
+substitute "ROI=7"
 include "ADnEDDetectorROIPluginASG.template"
 
 
